tests/sumo/errors/routes/first_edge_disallowed/plain/errors.sumo
Error: Vehicle '0' is not allowed to depart on any lane of edge 'beg'.
Quitting (on error).
